# vtbench

./: README.md  __init__.py  __main__.py  cli.py  pipeline.py  pyproject.toml
benchmark/: __init__.py  runner.py  scoring.py
compressors/: __init__.py  _base.py  _discover.py  _template.py  divprune.py  divprune_hybrid.py  fps.py  identity.py
datasets/: __init__.py  _base.py  _discover.py  gqa.py  mmmu_pro.py
models/: __init__.py  _base.py  _discover.py
models/gemma4/: __init__.py  backend.py  parsing.py
tests/: test_cli.py  test_compressors.py  test_discovery.py  test_scoring.py
